# django-REST-starter

./: .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.debug.yml  docker-compose.yml  load-data.sh  pgadmin-servers.json  prepare-dev.sh  run-cmd.sh
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
.github/workflows/: test.yml
backend/: .env  Dockerfile.dev  README.md  conftest.py  db.sqlite3  docker-compose.yml  load-data.sh  load-env.sh  loaddata.sh  manage.py  pyproject.toml  redis-commander-local.json  redis.conf  run-cmd.sh  run-server.sh  run-tests.sh
backend/backend/: __init__.py  asgi.py  celery.py  mypy.py  settings.py  urls.py  wsgi.py
backend/backend/settings/: base.py  test.py
backend/common/: __init__.py  tests.py
backend/common/fixtures/: users.json
backend/common/management/: __init__.py
backend/common/management/commands/: __init__.py  load_users.py
backend/common/tests/: __init__.py  test_commands.py
backend/docs/: mkdocs.yml
backend/docs/docs/: developer-guide.md
backend/docs/docs/getting-started/: installation.md  usage.md
backend/env/: dev.env  local.env
backend/todo/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/todo/fixtures/: todos.json
backend/todo/migrations/: 0001_initial.py  __init__.py
backend/todo/templates/email/: undone_todos.html  undone_todos.txt
backend/todo/tests/: test_models.py  test_serializers.py  test_tasks.py  test_views.py
docs/: mkdocs.yml
docs/docs/: api-reference.md  developer-guide.md  index.md
docs/docs/getting-started/: basic-usage.md  installation.md  requirements.md
env/: dev.env
