[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Konrad Zagozda <zagozdakonrad@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
django-allauth = "^0.54.0"
dj-rest-auth = "^3.0.0"
drf-spectacular = "^0.26.2"
celery = "^5.2.7"
django-celery-results = "^2.5.0"
django-celery-beat = "^2.5.0"
redis = "^4.5.4"
faker = "^18.6.0"
flower = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"
pytest-xdist = "^3.2.1"
pytest-cov = "^4.0.0"
debugpy = "^1.6.7"
isort = "^5.12.0"
pylama = "^8.4.1"
bandit = { extras = ["toml"], version = "^1.7.5" }
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.0" }
djangorestframework-stubs = { extras = [
	"compatible-mypy",
], version = "^3.14.0" }
yapf = "^0.33.0"
flake8 = "^6.0.0"
pylint = "^2.17.4"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--cov=. --cov-report html"

[tool.coverage.report]
fail_under = 95

[tool.coverage.run]
omit = [
	"backend/settings/*",
	"backend/asgi.py",
	"backend/wsgi.py",
	"backend/celery.py",
	"**/urls.py",
	"manage.py",
	"**/tests.py",
	"**/migrations/**",
	"**/__init__.py",
	"**/tests/**",
	"conftest.py",
	"**/apps.py",
	"**/admin.py",
	"**/settings.py",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "backend.settings"

[tool.yapfignore]
ignore_patterns = [".venv", "__pycache__"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "conftest.py"]

[tool.pylint]
load-plugins = "pylint_django"
django-settings-module = "backend.settings"

[tool.pylint.master]
ignore-paths = [".venv", "backend.venv"]
init-hook = "import sys; sys.path.append('/workspaces/django-tutorial/backend')"

[tool.pylint.MESSAGE_CONTROL]
disable = ["W0621", "C0114", "C0115", "C0116", "C0103", "R0901"]

[tool.isort]
line_length = 100
profile = "google"
